# opsmop

./: Makefile  setup.cfg  setup.py
opsmop/: __init__.py
opsmop/client/: cli.py
