[bdist_wheel]
universal = 1

[metadata]
name = opsmop
url = https://opsmop.io/
description = elite configuration management
long_description = file: README.md
long_description_content_type = text/markdown
author = Michael DeHaan
author_email = michael@michaeldehaan.net
license = Apache License Version 2.0, January 2004
license_file = LICENSE.md
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Utilities
    Topic :: System :: Installation/Setup
    Topic :: System :: Systems Administration
keywords =
    automation
    configuration


[options]
python_requires = >=3.6
include_package_data = True

setup_requires =
    setuptools_scm
    setuptools_scm_git_archive

install_requires =
    PyYAML
    jinja2>=2.10


[options.extras_require]
testing =
    pytest

[options.entry_points]
console_scripts =
    opsmop=opsmop.client.cli:main

